--- a/server/public/index.html
+++ b/server/public/index.html
@@ -14,7 +14,25 @@
 <body>
     <main ng-app="TodoApp" ng-controller="TodoController as vm">
         <h1>MEAN Stack ToDo List</h1>
-        
+        <input type="text" ng-model="vm.newTask.description" placeholder="What do you need to get done?">
+        <button ng.click="vm.postTask()">Add Task</button>
+
+        <table>
+            <thead>
+                <tr>
+                    <td>Description</td>
+                    <td>Finish</td>
+                    <td>Delete</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="task in vm.taskList">
+                    <td>Test</td>
+                    <td>Test</td>
+                    <td>Test</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
 </body>
 
